--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -343,9 +343,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: left;
-    margin: 2rem auto;
-    width: 80%;
-    gap: 1.7rem;
+    margin: 1.5rem auto;
+    width: 100%;
+    gap: 1rem;
+
 
     h1 {
         font-size: 2.5rem;
@@ -361,7 +362,8 @@
         border-color: #003366; 
         padding: 2rem;
         margin-bottom: auto;
-        width: 27%;
+        margin: 5px;
+        width: 25%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
