--- a/web/src/components/hostverification/hostverification.module.css
+++ b/web/src/components/hostverification/hostverification.module.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 .headertext-container h1, p{
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 
 .headertext-container h1{
@@ -83,8 +83,8 @@ html, body {
 
 .bottom-container{
   display: flex;
-  flex-direction: column;
   align-items: end;
+  justify-content: space-between;
   width: 100%;
 }
 /* containers */
