--- a/web/src/components/hostdashboard/HostRevenueCards/RevenueOverview.css
+++ b/web/src/components/hostdashboard/HostRevenueCards/RevenueOverview.css
@@ -1,5 +1,5 @@
 /* General Card Styling */
-.revenue-card {
+.ro-revenue-card {
     background-color: white;
     padding: 5px; /* Reduced padding */
     border-radius: 10px;
@@ -10,32 +10,34 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.revenue-card:hover {
+.ro-revenue-card:hover {
     transform: translateY(-3px);
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
-.revenue-overview h3 { /* Adjust this based on your actual HTML tag */
+
+.ro-revenue-overview h3 { /* Adjust this based on your actual HTML tag */
     font-size: 0.8em; /* Reduce font size to make it smaller */
     padding: 10px;
     text-align: center;
     color: #333; /* Optional: adjust the color */
-    font-weight: normal ;
+    font-weight: normal;
 }
-.revenue-card h4 {
+
+.ro-revenue-card h4 {
     margin-bottom: 4px; /* Reduced margin */
     font-size: 0.5em; /* Reduced title font */
     color: #000000;
     font-weight: normal;
 }
 
-.revenue-card p {
+.ro-revenue-card p {
     font-size: 1.0em; /* Reduced font size for the value */
     color: #003366;
     font-weight: normal;
 }
 
 /* Container for Cards and Dashboard */
-.dashboard-container {
+.ro-dashboard-container {
     display: flex;
     justify-content: space-between;
     gap: 10px; /* Reduced gap */
@@ -43,7 +45,7 @@
     width: 50%; /* Reduced width */
 }
 
-.card-grid {
+.ro-card-grid {
     display: flex;
     flex-wrap: wrap;
     gap: 8px; /* Reduced gap */
@@ -52,7 +54,7 @@
 }
 
 /* Overview Section */
-.revenue-overview {
+.ro-revenue-overview {
     background-color: #f6f6f7;
     padding: 5px; /* Reduced padding */
     border-radius: 10px;
