--- a/web/src/components/hostdashboard/HostPropertyCare.css
+++ b/web/src/components/hostdashboard/HostPropertyCare.css
@@ -1,1 +1,11 @@
+.property-span{
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
 
+.property-content{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
