--- a/web/src/components/hostdashboard/HostFinanceTab.css
+++ b/web/src/components/hostdashboard/HostFinanceTab.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%
+  width: 100%;
+  margin-left: 1%;
 }
 .finance-span{
     color: blue;
