--- a/web/src/components/base/MenuBar.css
+++ b/web/src/components/base/MenuBar.css
@@ -39,7 +39,7 @@
     margin-right: 10px;
 }
 
-/* Adjusted CSS for dropdown */
+
 .bottomPersonalMenuDropdownContent {
     position: relative;
     display: inline-block;
@@ -106,18 +106,30 @@
     opacity: 90%;
 }
 
-.headerButtons button {
-    width: 100%;
-    height: 100%;
-    padding: 5px 15px;
-    border-radius: 15px;
-    overflow: hidden;
-    border: 0.50px #49146A solid;
-    justify-content: flex-start;
+.headerButtons {
+    display: flex;
+    flex-direction: column; 
     align-items: center;
-    gap: 10px;
-    display: inline-flex;
+    justify-content: center; 
+    gap: 8px; 
+    color: black;
+    text-align: center;
+    padding: 12px;
+    font-size: 18px;
+    border-radius: 10px;
+    font-family: Kanit, sans-serif;
+    cursor: pointer;
+    width: auto;
+
 }
+
+.headerButtons img, .personalMenu img {
+    width: 24px; 
+    height: 24px;
+}
+
+.headerButtons:hover, .personalMenu
+
 
 .headerButtons:hover {
     background: #3fb3663a;
@@ -184,7 +196,6 @@
         width: 40%;
         min-width: 240px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
         bottom: calc(90% + 5px);
         right: 0;
         border-radius: 10px;
@@ -234,7 +245,6 @@
 
     .headerHostButton {
         margin-right: 15%;
-        margin-left: -15%;
     }
 }
 
