--- a/web/src/components/base/MenuBar.css
+++ b/web/src/components/base/MenuBar.css
@@ -13,7 +13,7 @@
     color: black;
     text-align: center;
     padding: 12px;
-    font-size: 18px;
+    font-size: 10px;
     border-radius: 10px;
     margin-top: 0;
     display: inline-flex;
@@ -22,6 +22,17 @@
     width: auto;
     box-shadow: 0 0 5px hsl(0 0% 78%);
 }
+
+
+.textMenu{
+    font-size: 11px;
+}
+
+.imgMenu{
+    font-size: 70px;
+
+}
+
 
 .personalMenu {
     border: none;
@@ -111,6 +122,7 @@
     flex-direction: column; 
     align-items: center;
     justify-content: center; 
+    margin: 10px;
     gap: 8px; 
     color: black;
     text-align: center;
@@ -163,10 +175,11 @@
 
     .menu {
         display: flex;
-        justify-content: center;
-        width: 100%;
+        justify-content: space-between;
+        width: auto;
         padding: 0 0 0 5px;
         margin: -23px 10px 0 20px;
+        gap: 1px ;
     }
 
     .menuButtons {
