removed why domits button from tablet and mobile

--- a/web/src/components/home/Accommodations.css
+++ b/web/src/components/home/Accommodations.css
@@ -143,6 +143,9 @@
     align-items: center;
     text-align: center;
   }
+  .why-domits-button {
+    display: none;
+  }
 }
 
 @media (max-width: 480px) {
