Added the stripe check up to see if the user has already provided his or her bank details otherwise he or she should go to the stripe dashboard to complete the onboarding

--- a/web/src/components/hostdashboard/HostFinanceTab.css
+++ b/web/src/components/hostdashboard/HostFinanceTab.css
@@ -10,3 +10,8 @@
     text-decoration: underline;
     cursor: pointer;
 }
+.finance-li{
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+}
