--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -53,3 +53,46 @@
     background-color: #4CAF50;
     color: white;
 }
+
+
+@media (max-width: 768px) {
+    .horizontalOptions {
+        flex-direction: column;
+    }
+
+    .settingsOptions .settingsOption, 
+    .dataRemovalOption, 
+    .horizontalOptions .settingsOption {
+        padding: 15px;
+        font-size: 0.9em;
+        margin-right: 0;
+        min-width: 100%;
+    }
+
+    .dataRemovalSection {
+        flex-direction: column;
+        margin-top: 15px;
+    }
+
+    .dataRemovalOption {
+        height: auto;
+        padding: 15px;
+        min-width: 100%;
+    }
+
+    .publicProfileContent .profileField input {
+        width: 100%;
+        margin: 5px 0;
+    }
+
+    .publicProfileContent .profilePicture .icon {
+        width: 80px;
+        height: 80px;
+    }
+
+    .InfoBox {
+        padding: 15px;
+        font-size: 0.9em;
+    }
+}
+
