--- a/web/src/components/guestdashboard/settingsguestdashboard.css
+++ b/web/src/components/guestdashboard/settingsguestdashboard.css
@@ -88,4 +88,11 @@
 }
 
 
-
+@media (max-width: 480px) {
+      .infoBox {
+          padding: 10px;
+          font-size: 0.8em;
+          width: 90%;
+          flex-wrap: wrap;
+      }
+}
