--- a/web/src/components/hostdashboard/Calendar.module.css
+++ b/web/src/components/hostdashboard/Calendar.module.css
@@ -220,3 +220,64 @@
     }
 
 }
+
+
+
+@media only screen and (max-width: 768px) {
+    .body {
+        padding: 0.5rem;
+        gap: 3%;
+    }
+    .body .calendarContent {
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .body .buttonBox {
+        flex-direction: column;
+        align-items: stretch;   
+        gap: 1rem;
+    }
+    .calendar {
+        width: 90%;
+    }
+    .dateRanges {
+        width:90%;
+        padding: 0.75rem;
+    }
+    .dateRanges .dateRange {
+        flex-direction: column;
+        align-items: center;
+        font-size: 0.75rem;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .body .calendarContent {
+        gap: 1rem;
+    }
+    .body .buttonBox {
+        padding: 0.25rem;
+        gap: 0.5rem;
+    }
+    .body .buttonBox button {
+        width: 90%;
+    }
+    .calendar {
+        width: 90%;
+    }
+    .calendar header h3 {
+        font-size: 1rem;
+    }
+    .dateRanges .dateRange {
+        font-size: 0.65rem;
+        padding: 0.5rem;
+    }
+    .dateRanges .removeButton {
+        width: 0.75rem;
+        height: 0.75rem;
+    }
+    .calendar .prev, .calendar .next {
+        width: 1rem;
+        height: 1rem;
+    }
+}
