--- a/web/src/components/hostdashboard/HostRevenueStyle.css
+++ b/web/src/components/hostdashboard/HostRevenueStyle.css
@@ -10,24 +10,20 @@
     margin-bottom: 20px;
 }
 
-/* Flexbox Layout */
 .hr-host-revenues {
     display: flex;
     flex-direction: row;
 }
 
-/* Sidebar */
 .hr-pages {
     width: 20%;
     margin-right: 20px;
 }
 
-/* Main Content */
 .hr-content {
     width: 80%;
 }
 
-/* Revenue Header */
 .hr-revenue-header {
     display: flex;
     justify-content: space-between;
@@ -55,7 +51,6 @@
     cursor: pointer;
 }
 
-/* Revenue Chart */
 .hr-chart-container {
     background-color: #ffffff;
     padding: 20px;
@@ -68,7 +63,6 @@
     margin-bottom: 20px;
 }
 
-/* Summary Section */
 .hr-summary {
     background-color: #ffffff;
     padding: 20px;
@@ -113,16 +107,15 @@
     cursor: pointer;
 }
 
-/* Button positioning inside content */
 .hr-content {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;  /* Align content to the top */
-    align-items: flex-start;      /* Align items to the start of the container */
+    justify-content: flex-start; 
+    align-items: flex-start;    
 }
 
 .hr-button {
-    margin-top: 20px; /* Add some space between the button and other elements */
+    margin-top: 20px; 
     padding: 10px 20px;
     background-color: #007bff;
     color: white;
@@ -137,22 +130,22 @@
 
 .hr-content {
     display: flex;
-    gap: 20px; /* Space between the sections */
+    gap: 20px; 
 }
 
 .hr-revenue-overview {
     flex: 1;
-    min-width: 300px; /* Ensure it doesn't shrink too much */
+    min-width: 300px; 
 }
 
 .hr-monthly-comparison {
-    flex: 2; /* This will make it take more space if needed */
+    flex: 2; 
 }
 
 .hr-cards {
     display: flex;
-    gap: 20px;  /* Space between the two cards */
-    margin: 20px 0;  /* Space around the cards */
+    gap: 20px;  
+    margin: 20px 0; 
 }
 
 .hr-occupancy-rate-card, .hr-revpar-card {
