--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -9,6 +9,7 @@
 .filterContainer {
     text-align: center;
 }
+
 .filterContainer label {
     margin-right: 10px;
 }
@@ -54,7 +55,6 @@
     color: white;
 }
 
-
 @media (max-width: 768px) {
     .horizontalOptions {
         flex-direction: column;
@@ -94,5 +94,36 @@
         padding: 15px;
         font-size: 0.9em;
     }
+
+    .bookings-table {
+        width: 100%;
+        font-size: 0.9em;
+    }
 }
 
+@media (max-width: 480px) {
+    .bookingContent {
+        width: 100%;
+        margin-left: 20px;
+        margin-right: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .bookings-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+        height: auto;
+        font-size: 0.8em;
+        overflow-x: auto;
+        display: block;
+        white-space: nowrap;
+    }
+
+    .bookings-table th, .bookings-table td {
+        padding: 8px;
+        text-align: left;
+    }
+}
