inline code removed

--- a/web/src/components/hostdashboard/HostPropertyCare.css
+++ b/web/src/components/hostdashboard/HostPropertyCare.css
@@ -9,3 +9,10 @@
     text-decoration: underline;
     cursor: pointer;
 }
+.host-pc-property{
+    display: flex;
+    width: 100%;
+}
+.property-h3{
+    width:60%;
+}
