Reservation Host respon fixed both
Fixed mobile AND pc

--- a/web/src/components/hostdashboard/HostReservations.module.css
+++ b/web/src/components/hostdashboard/HostReservations.module.css
@@ -1,3 +1,10 @@
+.reservationContainer {
+    display: flex;
+    flex-direction: row;
+}
+
+
+
 .reservationContent {
     display: flex;
     flex-direction: column;
@@ -5,24 +12,24 @@
     min-height: 55rem;
 }
 
-.header {
+.reservationContent .header {
     text-align: left;
     padding-left: 2em;
 }
 
-.reservationInfo {
+.reservationContent .reservationInfo {
     display: flex;
     flex-direction: row;
     gap: 1em;
 }
 
-.infoIcon {
+.reservationContent .infoIcon {
     max-width: 1.5em;
     max-height: 1.5em;
     align-self: center;
 }
 
-.reservationSelector {
+.reservationContent .reservationSelector {
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -33,7 +40,7 @@
     flex-wrap: wrap;
 }
 
-.option {
+.reservationContent .option {
     border-radius: 5%;
     padding: 0.25em;
     box-shadow: inset 0 0 20px 10px #dedede;
@@ -42,18 +49,18 @@
     text-align: center;
 }
 
-.selected, .option:hover {
+.reservationContent .selected, .reservationContent .option:hover {
     cursor: pointer;
     color: white;
     background-color: #0D9813;
     box-shadow: none;
 }
 
-.reservationTh {
+.reservationContent .reservationTh {
     min-width: 7vw;
 }
 
-.reservationDisplay {
+.reservationContent .reservationDisplay {
     display: flex;
     flex-direction: column;
     box-shadow: 0 0 20px 10px #dedede;
@@ -63,17 +70,17 @@
     margin: 1.5em;
 }
 
-.sort {
+.reservationContent .sort {
     max-height: 1.5vh;
     max-width: 1.5vw;
     margin-left: 3%;
 }
 
-.sort:hover {
+.reservationContent .sort:hover {
     cursor: pointer;
 }
 
-.utilBox {
+.reservationContent .utilBox {
     display: flex;
     flex-direction: row;
     gap: 1%;
@@ -81,24 +88,19 @@
     width: auto;
 }
 
-.refreshBtn {
+.reservationContent .refreshBtn {
     color: white;
     background-color: var(--primary-color);
     border: none;
-    padding: 0.25em;
-    border-radius: 1em;
-    min-width: 5vw;
-    font-size: 1em;
 }
 
-.refreshBtn:hover {
+.reservationContent .refreshBtn:hover {
     color: var(--primary-color);
-    cursor: pointer;
     background-color: white;
     border: 1px solid var(--primary-color);
 }
 
-.btnBox {
+.reservationContent .btnBox {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 1em;
@@ -109,28 +111,41 @@
     align-items: center;
 }
 
-.selectedText {
+.reservationContent .selectedText {
     color: white;
     font-size: 1.1em;
 }
 
-.btnUndo:hover {
+.reservationContent button {
+    padding: 0.25em;
+    border-radius: 1em;
+    min-width: 1vw;
+    font-size: 1em;
+}
+
+.reservationContent button:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.reservationContent .btnUndo:hover {
     background-color: black;
 }
 
-.btnDeny:hover {
+.reservationContent .btnDeny:hover {
     background-color: red;
 }
 
-.btnApprove:hover {
+.reservationContent .btnApprove:hover {
     background-color: #0A760F;
 }
 
-.btnGroup {
+.reservationContent .btnGroup {
     display: flex;
     justify-self: end;
     gap: 1em;
 }
+
 
 @media (max-width: 768px) {
     .reservationContent {
@@ -138,38 +153,38 @@
         min-height: auto;
     }
 
-    .reservationInfo {
+    .reservationContent .reservationInfo {
         flex-direction: column;
         gap: 0.5em;
     }
 
-    .reservationSelector {
+    .reservationContent .reservationSelector {
         justify-content: center;
         gap: 1em;
     }
 
-    .option {
+    .reservationContent .option {
         min-width: 10vw;
         font-size: 0.9em;
     }
 
-    .reservationDisplay {
+    .reservationContent .reservationDisplay {
         padding: 4%;
         margin: 1em;
         gap: 1em;
     }
 
-    .btnBox {
+    .reservationContent .btnBox {
         grid-template-columns: auto auto;
         gap: 0.5em;
     }
 
-    .refreshBtn {
+    .reservationContent button {
         font-size: 0.9em;
-        min-width: 8vw;
+        min-width: 1vw;
     }
 
-    .selectedText {
+    .reservationContent .selectedText {
         font-size: 1em;
     }
 }
@@ -180,39 +195,42 @@
         min-height: auto;
     }
 
-    .reservationInfo {
+    .reservationContent .reservationInfo {
         flex-direction: column;
         gap: 0.5em;
     }
 
-    .reservationSelector {
+    .reservationContent .reservationSelector {
         flex-direction: column;
         align-items: center;
         gap: 1em;
     }
 
-    .option {
+    .reservationContent .option {
         min-width: 15vw;
         font-size: 0.8em;
     }
 
-    .reservationDisplay {
+    .reservationContent .reservationDisplay {
         padding: 3%;
         margin: 0.5em;
         gap: 0.8em;
     }
 
-    .btnBox {
+    .reservationContent .btnBox {
         grid-template-columns: auto;
         gap: 0.5em;
     }
 
-    .refreshBtn {
+    .reservationContent button {
         font-size: 0.8em;
-        min-width: 12vw;
+        min-width: 1vw;
     }
 
-    .selectedText {
+    .reservationContent .selectedText {
         font-size: 0.9em;
+    }
+    .reservationContainer{
+        display: table-row;
     }
 }
